Somewhat fix the white space & img bg. Need help

--- a/source/home-page/styles/style.css
+++ b/source/home-page/styles/style.css
@@ -575,7 +575,7 @@ h3{
 }
 main{
   padding-top: 200vh;
-  padding-left: 100vw;
+  margin-left: 100vw;
   margin-right: 100vw;
   
 }
@@ -589,4 +589,9 @@ main{
 .slide {
   flex: 0 0 20%;
   padding: 0 0 0 ;
+ }
+
+ .background-image {
+   background-image: url("images/kitchen.jpg");
+   background-color: crimson;
  }
